add tags to api docs [#261]
