# docs/swagger.yaml
@@ -769,6 +769,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Access Token Exchange
+      tags:
+      - Authorization
   /auth/check:
     get:
       consumes:
@@ -786,6 +788,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Authorization Check
+      tags:
+      - Authorization
   /auth/logout:
     post:
       consumes:
@@ -800,6 +804,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Status'
       summary: Logout
+      tags:
+      - Authorization
   /guilds:
     get:
       consumes:
@@ -820,6 +826,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: List Guilds
+      tags:
+      - Guilds
   /guilds/:id:
     get:
       consumes:
@@ -847,6 +855,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Get Guild
+      tags:
+      - Guilds
   /guilds/:id/:memberid:
     get:
       consumes:
@@ -879,6 +889,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Get Guild Member
+      tags:
+      - Members
   /guilds/:id/:memberid/ban:
     post:
       consumes:
@@ -921,6 +933,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Create A Member Ban Report
+      tags:
+      - Member Reporting
   /guilds/:id/:memberid/kick:
     post:
       consumes:
@@ -963,6 +977,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Create A Member Kick Report
+      tags:
+      - Member Reporting
   /guilds/:id/:memberid/mute:
     post:
       consumes:
@@ -1005,6 +1021,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Unmute A Member
+      tags:
+      - Member Reporting
   /guilds/:id/:memberid/permissions:
     get:
       consumes:
@@ -1037,6 +1055,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Get Guild Member Permissions
+      tags:
+      - Members
   /guilds/:id/:memberid/permissions/allowed:
     get:
       consumes:
@@ -1072,6 +1092,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Get Guild Member Allowed Permissions
+      tags:
+      - Members
   /guilds/:id/:memberid/reports:
     get:
       consumes:
@@ -1121,6 +1143,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Get Guild Member Reports
+      tags:
+      - Members
     post:
       consumes:
       - application/json
@@ -1162,6 +1186,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Create A Member Report
+      tags:
+      - Member Reporting
   /guilds/:id/:memberid/reports/count:
     get:
       consumes:
@@ -1194,6 +1220,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Get Guild Member Reports Count
+      tags:
+      - Members
   /guilds/:id/:memberid/unbanrequests:
     get:
       consumes:
@@ -1228,6 +1256,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Get Guild Member Unban Requests
+      tags:
+      - Members
   /guilds/:id/:memberid/unbanrequests/count:
     get:
       consumes:
@@ -1261,6 +1291,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Get Guild Member Unban Requests Count
+      tags:
+      - Members
   /guilds/:id/antiraid/joinlog:
     delete:
       consumes:
@@ -1288,6 +1320,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Reset Antiraid Joinlog
+      tags:
+      - Guilds
     get:
       consumes:
       - application/json
@@ -1316,6 +1350,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Get Antiraid Joinlog
+      tags:
+      - Guilds
   /guilds/:id/backups:
     get:
       consumes:
@@ -1345,6 +1381,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Get Guild Backups
+      tags:
+      - Guild Backups
   /guilds/:id/backups/:backupid/download:
     get:
       consumes:
@@ -1386,6 +1424,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Download Backup File
+      tags:
+      - Guild Backups
     post:
       consumes:
       - application/json
@@ -1417,6 +1457,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Obtain Backup Download OTA Key
+      tags:
+      - Guild Backups
   /guilds/:id/backups/toggle:
     post:
       consumes:
@@ -1450,6 +1492,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Toggle Guild Backup Enable
+      tags:
+      - Guild Backups
   /guilds/:id/inviteblock:
     post:
       consumes:
@@ -1487,6 +1531,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Toggle Guild Inviteblock Enable
+      tags:
+      - Guilds
   /guilds/:id/members:
     get:
       consumes:
@@ -1531,6 +1577,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Get Guild Member List
+      tags:
+      - Members
   /guilds/:id/permissions:
     get:
       consumes:
@@ -1558,6 +1606,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Get Guild Permission Settings
+      tags:
+      - Guilds
     post:
       consumes:
       - application/json
@@ -1594,6 +1644,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Apply Guild Permission Rule
+      tags:
+      - Guilds
   /guilds/:id/reports:
     get:
       consumes:
@@ -1633,6 +1685,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Get Guild Modlog
+      tags:
+      - Guilds
   /guilds/:id/reports/count:
     get:
       consumes:
@@ -1660,6 +1714,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Get Guild Modlog Count
+      tags:
+      - Guilds
   /guilds/:id/scoreboard:
     get:
       consumes:
@@ -1696,6 +1752,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Get Guild Scoreboard
+      tags:
+      - Guilds
   /guilds/:id/settings:
     get:
       consumes:
@@ -1723,6 +1781,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Get Guild Settings
+      tags:
+      - Guilds
     post:
       consumes:
       - application/json
@@ -1759,6 +1819,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Get Guild Settings
+      tags:
+      - Guilds
   /guilds/:id/settings/antiraid:
     get:
       consumes:
@@ -1786,6 +1848,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Get Guild Antiraid Settings
+      tags:
+      - Guilds
     post:
       consumes:
       - application/json
@@ -1822,6 +1886,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Update Guild Antiraid Settings
+      tags:
+      - Guilds
   /guilds/:id/settings/flushguilddata:
     post:
       consumes:
@@ -1859,6 +1925,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Flush Guild Data
+      tags:
+      - Guilds
   /guilds/:id/settings/karma:
     get:
       consumes:
@@ -1886,6 +1954,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Get Guild Karma Settings
+      tags:
+      - Guilds
     post:
       consumes:
       - application/json
@@ -1922,6 +1992,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Update Guild Karma Settings
+      tags:
+      - Guilds
   /guilds/:id/settings/karma/blocklist:
     get:
       consumes:
@@ -1951,6 +2023,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Get Guild Karma Blocklist
+      tags:
+      - Guilds
   /guilds/:id/settings/karma/blocklist/:memberid:
     delete:
       consumes:
@@ -1987,6 +2061,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Remove Guild Karma Blocklist Entry
+      tags:
+      - Guilds
     put:
       consumes:
       - application/json
@@ -2022,6 +2098,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Add Guild Karma Blocklist Entry
+      tags:
+      - Guilds
   /guilds/:id/settings/karma/rules:
     get:
       consumes:
@@ -2051,6 +2129,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Get Guild Settings Karma Rules
+      tags:
+      - Guilds
     post:
       consumes:
       - application/json
@@ -2087,6 +2167,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Create Guild Settings Karma
+      tags:
+      - Guilds
   /guilds/:id/settings/karma/rules/:ruleid:
     delete:
       consumes:
@@ -2123,6 +2205,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Remove Guild Settings Karma
+      tags:
+      - Guilds
     post:
       consumes:
       - application/json
@@ -2164,6 +2248,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Update Guild Settings Karma
+      tags:
+      - Guilds
   /guilds/:id/settings/logs:
     get:
       consumes:
@@ -2195,6 +2281,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Get Guild Log Count
+      tags:
+      - Guilds
   /guilds/:id/settings/logs/state:
     get:
       consumes:
@@ -2222,6 +2310,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Get Guild Settings Log State
+      tags:
+      - Guilds
     post:
       consumes:
       - application/json
@@ -2258,6 +2348,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Update Guild Settings Log State
+      tags:
+      - Guilds
   /guilds/:id/settings/logs/state/:entryid:
     delete:
       consumes:
@@ -2293,6 +2385,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Delete Guild Log Entries
+      tags:
+      - Guilds
   /guilds/:id/starboard:
     get:
       consumes:
@@ -2322,6 +2416,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Get Guild Starboard
+      tags:
+      - Guilds
   /guilds/:id/unbanrequests:
     get:
       consumes:
@@ -2351,6 +2447,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Get Guild Unbanrequests
+      tags:
+      - Guilds
   /guilds/:id/unbanrequests/:requestid:
     get:
       consumes:
@@ -2383,6 +2481,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Get Single Guild Unbanrequest
+      tags:
+      - Guilds
     post:
       consumes:
       - application/json
@@ -2414,6 +2514,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Process Guild Unbanrequest
+      tags:
+      - Guilds
   /guilds/:id/unbanrequests/count:
     get:
       consumes:
@@ -2445,6 +2547,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Get Guild Unbanrequests Count
+      tags:
+      - Guilds
   /me:
     get:
       consumes:
@@ -2458,6 +2562,8 @@ paths:
           schema:
             $ref: '#/definitions/models.User'
       summary: Me
+      tags:
+      - Etc
   /ota:
     get:
       consumes:
@@ -2474,6 +2580,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: OTA Login
+      tags:
+      - OTA
   /reports/:id:
     get:
       consumes:
@@ -2505,6 +2613,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Get Report
+      tags:
+      - Reports
   /reports/:id/revoke:
     post:
       consumes:
@@ -2542,6 +2652,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Revoke Report
+      tags:
+      - Reports
   /settings/noguildinvite:
     get:
       consumes:
@@ -2564,6 +2676,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Get No Guild Invites Status
+      tags:
+      - Global Settings
     post:
       consumes:
       - application/json
@@ -2596,6 +2710,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Set No Guild Invites Status
+      tags:
+      - Global Settings
   /settings/presence:
     get:
       consumes:
@@ -2613,6 +2729,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Get Presence
+      tags:
+      - Global Settings
     post:
       consumes:
       - application/json
@@ -2640,6 +2758,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Set Presence
+      tags:
+      - Global Settings
   /sysinfo:
     get:
       consumes:
@@ -2653,6 +2773,8 @@ paths:
           schema:
             $ref: '#/definitions/models.SystemInfo'
       summary: System Information
+      tags:
+      - Etc
   /token:
     delete:
       consumes:
@@ -2670,6 +2792,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: API Token Deletion
+      tags:
+      - Tokens
     get:
       consumes:
       - application/json
@@ -2691,6 +2815,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: API Token Info
+      tags:
+      - Tokens
     post:
       consumes:
       - application/json
@@ -2708,6 +2834,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: API Token Generation
+      tags:
+      - Tokens
   /unbanrequests:
     get:
       consumes:
@@ -2731,6 +2859,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Get Unban Requests
+      tags:
+      - Unban Requests
     post:
       consumes:
       - application/json
@@ -2762,6 +2892,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Create Unban Requests
+      tags:
+      - Unban Requests
   /unbanrequests/bannedguilds:
     get:
       consumes:
@@ -2786,6 +2918,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Get Banned Guilds
+      tags:
+      - Unban Requests
   /usersettings/ota:
     get:
       consumes:
@@ -2807,6 +2941,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Get OTA Usersettings State
+      tags:
+      - User Settings
     post:
       consumes:
       - application/json
@@ -2838,6 +2974,8 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Update OTA Usersettings State
+      tags:
+      - User Settings
   /util/color/:hexcode:
     get:
       consumes:
@@ -2862,6 +3000,8 @@ paths:
           schema:
             type: data
       summary: Color Generator
+      tags:
+      - Utilities
   /util/commands:
     get:
       consumes:
@@ -2877,6 +3017,8 @@ paths:
               $ref: '#/definitions/models.CommandInfo'
             type: array
       summary: Command List
+      tags:
+      - Utilities
   /util/landingpageinfo:
     get:
       consumes:
@@ -2891,4 +3033,33 @@ paths:
           schema:
             $ref: '#/definitions/models.LandingPageResponse'
       summary: Landing Page Info
+      tags:
+      - Utilities
 swagger: "2.0"
+tags:
+- description: General root API functionalities.
+  name: Etc
+- description: General utility functionalities.
+  name: Utilities
+- description: Authorization endpoints.
+  name: Authorization
+- description: One Time Auth token endpoints.
+  name: OTA
+- description: API token endpoints.
+  name: Tokens
+- description: Global bot settings endpoints.
+  name: Global Settings
+- description: General reports endpoints.
+  name: Reports
+- description: Guild specific endpoints.
+  name: Guilds
+- description: Guild backup endpoints.
+  name: Guild Backups
+- description: Unban requests endpoints.
+  name: Unban Requests
+- description: User specific settings endpoints.
+  name: User Settings
+- description: Member reporting endpoints.
+  name: Member Reporting
+- description: Members specific endpoints.
+  name: Members
